﻿drkns 03.02.2016 09:11:50 +0200 - build 4536

1. Восстановим поведение выделения в диалогах как до 4484.

drkns 02.02.2016 22:19:45 +0200 - build 4535

1. С форума: запуск far /v или far /e при включенном автосохранении сбивал настройки панелей.

drkns 02.02.2016 21:34:08 +0200 - build 4534

1. Уточнение 4525 для нетривиальных условий запуска.

drkns 02.02.2016 21:17:56 +0200 - build 4533

1. Адаптация граббера к 4526.

drkns 02.02.2016 19:55:16 +0200 - build 4532

1. С форума: в одном из билдов 4482-4484 сломался Editor.SetStr

drkns 02.02.2016 09:55:00 +0200 - build 4531

1. При удалении элемента из списка дополнения не обновлялось содержимое комстроки.

drkns 01.02.2016 23:00:10 +0200 - build 4530

1. Оптимизация 4525 для System.WindowMode = true

2. System.WindowMode теперь true по умолчанию, ибо:
   - это хорошо;
   - нужно тестирование.

w17 01.02.2016 16:53:33 +0300 - build 4529

1. M#3161: Extend GoTo (AltF8)

drkns 01.02.2016 10:34:36 +0200 - build 4528

1. Продолжение 4525.

drkns 01.02.2016 03:16:02 +0200 - build 4527

1. Продолжение 4525.

drkns 01.02.2016 01:11:06 +0200 - build 4526

1. Говорят, после 4516 странно работала средняя кнопка мыши в панелях.

drkns 31.01.2016 22:59:13 +0200 - build 4525

1. 0002900: Меню из файла-списка: проблема при вызове из User menu
   Переписана половина запускателя, исправлено множество багов, возможно, наделано новых.

2. System.Executor.SilentExternal больше нет.

3. Нажатие Enter при отключенных панелях теперь прокручивает вывод, как в cmd.

w17 29.01.2016 21:57:57 +0300 - build 4524

1. Fix 4484. aka M#3162: Исчезновение текста во вьювере

w17 29.01.2016 16:55:57 +0300 - build 4523

1. Продолжение 4521.
   Теперь "D:\Path Name"\ глобальная фича - так работает QuoteSpace().

w17 27.01.2016 23:06:51 +0300 - build 4522

1. Экспериментально: кастомизация языковых файлов без редактирования генерируемых 'родных' файлов .lng

   Чтобы работало надо: