@@ -1,4 +1,8 @@
-﻿drkns 03.02.2016 09:11:50 +0200 - build 4536
+﻿w17 03.02.2016 16:10:50 +0300 - build 4537
+
+1. M#2922: символьная ссылка на исполняемый файл создает отдельную консоль при запуске
+
+drkns 03.02.2016 09:11:50 +0200 - build 4536
 
 1. Восстановим поведение выделения в диалогах как до 4484.
 
